Rewrite wakeup logic to improve the reliability and also reduce the spent time.